# paperplotlib

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  test.py
.github/workflows/: test.yml
docs/: index.html
docs/articles/graph/折线图/: index.html
docs/articles/graph/柱状图/: index.html
docs/articles/md-docs/README/: index.html
docs/articles/md-docs/使用方法/: index.html
docs/articles/md-docs/使用示例/: index.html
docs/articles/md-docs/设计思路/: index.html
docs/articles/md-docs/配色选择/: index.html
docs/css/: diff.css  index.css
examples/: bar1.py  bar2.py  line_1.py  line_2.py  stackbar_graph.py
md-docs/: README.md  dir.yml  使用方法.md  使用示例.md  设计思路.md  配色选择.md
md-docs/graph/: 折线图.md  柱状图.md
paperplotlib/: __init__.py  bar_graph.py  color.css  color.py  graph.py  line_graph.py  stackbar_graph.py  style.py
test/: 2.py  3.py  4.py  5.py
test/bar/: 1.py  5.py
